fix kbd color in dark mode
fix kbd color in dark mode

--- a/packages/@vuepress/theme-default/src/client/styles/normalize.scss
+++ b/packages/@vuepress/theme-default/src/client/styles/normalize.scss
@@ -33,6 +33,7 @@ p a code {
 kbd {
   font-family: var(--font-family-code);
   background: var(--c-bg-lighter);
+  color: var(--c-text);
   border: solid 0.15rem var(--c-border-dark);
   border-bottom: solid 0.25rem var(--c-border-dark);
   border-radius: 0.15rem;
